fix ej 3 guia 7

--- a/7-guia/ejercicios-7/ej-3-7.tex
+++ b/7-guia/ejercicios-7/ej-3-7.tex
@@ -17,12 +17,12 @@
         $$
           f^2 = Xf + X + 1
           \Sii{\red{!}}
-          (f-1) \cdot (f + 1) = X \cdot (f - 1)
+          (f-1) \cdot (f + 1) = X \cdot (f + 1)
           \Sii{\red{!}}
-          (f+1) \cdot (f - (X+1)) = 0
+          (f+1) \cdot (f - (X + 1)) = \ua{0}{g}
         $$
         Eso último es una igualación de polinomios, donde el polinomio del miembro derecho es $g=0$. Entonces, para que
-        se cumpla esa igualdad para todo valor de $X$, el miembro derecho también tiene que ser 0 para todo valor de $X$.
+        se cumpla esa igualdad para todo valor de $X$, el miembro izquierdo \ul{también tiene que ser 0 para todo valor de $X$}.
         Eso ocurre cuando:
         $$
           f = -1 \otext f = X + 1
@@ -109,5 +109,6 @@
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/RamaEche}{Ramiro E. \github}
 \end{aportes}
