--- a/7-guia/ejercicios-7/ej-4-7.tex
+++ b/7-guia/ejercicios-7/ej-4-7.tex
@@ -27,7 +27,7 @@
           \to
           4X^4 + X^3 -4 = (2X^2 + 1) \cdot \ub{(2X^2 + 4X + 6)}{q[X]} + \ub{(3X + 4)}{r[X]}$
 
-  \item Después de hacer un par iteraciones en la división asoma la idea de que:
+  \item\label{ej4:item-iii} Después de hacer un par iteraciones en la división asoma la idea de que:
         $$
           X^n - 1 = (X-1) \cdot \ub{\sumatoria{j=0}{n-1} X^j}{q[X]} + \ub{0}{r[X]},
           \qquad\qquad{\text{\tiny(que es la geométrica con $X \distinto 1$)}}
