--- a/7-guia/ejercicios-7/ej-7-7.tex
+++ b/7-guia/ejercicios-7/ej-7-7.tex
@@ -1,83 +1,83 @@
 \begin{enunciado}{\ejercicio}
 
-Hallar el resto de la división de $f$ por $g$ para:
+  Hallar el resto de la división de $f$ por $g$ para:
 
-\begin{enumerate}[label=\roman*)]
-	\item $f = X^{353} - X - 1$ y $g = X^{31} - 2$ en $\racionales[X],\,\reales[X],\,\complejos[X]$,
+  \begin{enumerate}[label=\roman*)]
+    \item $f = X^{353} - X - 1$ y $g = X^{31} - 2$ en $\racionales[X],\,\reales[X],\,\complejos[X]$,
 
-	\item $f = X^{1000} + X^{40} + X^{20}  + 1$ y $g = X^6 + 1$ en $\racionales[X],\,\reales[X],\,\complejos[X]$ y $(\enteros/p\enteros)[X]$
+    \item $f = X^{1000} + X^{40} + X^{20}  + 1$ y $g = X^6 + 1$ en $\racionales[X],\,\reales[X],\,\complejos[X]$ y $(\enteros/p\enteros)[X]$
 
-	\item $f = X^{200} - 3X^{101} + 2$, y $g = X^{100} - X + 1$ en $\racionales[X],\,\reales[X],\,\complejos[X]$,
+    \item $f = X^{200} - 3X^{101} + 2$, y $g = X^{100} - X + 1$ en $\racionales[X],\,\reales[X],\,\complejos[X]$,
 
-	\item $f = X^{3016} + 2X^{1833} - X^{174} + X^{137} + 2X^4 - X^3 + 1$, y $g = X^4 + X^3 +X^2 + X + 1$ en $\racionales[X],\,\reales[X],\,\complejos[X]$
-	      (Sugerencia ver \refEjercicio{ej:cong} \ref{item})).
-\end{enumerate}
+    \item $f = X^{3016} + 2X^{1833} - X^{174} + X^{137} + 2X^4 - X^3 + 1$, y $g = X^4 + X^3 +X^2 + X + 1$ en $\racionales[X],\,\reales[X],\,\complejos[X]$
+          (Sugerencia ver \refEjercicio{ej:cong} \ref{ej4:item-iii})).
+  \end{enumerate}
 
 \end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
-	\item $g \divideA g \sisolosi \congruencia{X^{31} - 2}{ 0 }{X^{31} - 2} \sisolosi \congruencia{X^{31}}{2}{g}$
+  \item $g \divideA g \sisolosi \congruencia{X^{31} - 2}{ 0 }{X^{31} - 2} \sisolosi \congruencia{X^{31}}{2}{g}$
 
-	      $f = X^{353} - X - 1 =
-		      (\ub{X^{31}}{\conga g 2})^{11} X^{12} - X - 1 \conga g
-		      2^{11} X^{12} -X -1
-		      \to $
-	      \boxed{r_g(f) = 2^{11} X^{12} -1 }
+        $f = X^{353} - X - 1 =
+          (\ub{X^{31}}{\conga g 2})^{11} X^{12} - X - 1 \conga g
+          2^{11} X^{12} -X -1
+          \to $
+        \boxed{r_g(f) = 2^{11} X^{12} -1 }
 
-	\item
-	      $g \divideA g
-		      \sisolosi
-		      \congruencia{X^6 + 1}{ 0 }{X^6 + 1}
-		      \sisolosi
-		      \congruencia{X^6}{-1}{g}$
+  \item
+        $g \divideA g
+          \sisolosi
+          \congruencia{X^6 + 1}{ 0 }{X^6 + 1}
+          \sisolosi
+          \congruencia{X^6}{-1}{g}$
 
-	      $f =
-		      X^{1000} + X^{40} + X^{20}  + 1 =
-		      (X^6)^{166}X^4 + (X^6)^6 X^4 + (X^6)^3 X^2  + 1 \conga g
-		      X^4 + X^4 \magenta{-} X^2  + 1 =
-		      2X^4 - X^2 + 1\\
-		      \to$
-	      \boxed{r_g(f) = 2X^4 - X^2 + 1}\\
-	      \red{¿Qué onda en $\enteros/p\enteros$?}
-		      $\to
-			      \llave{l}{
-				      \text{si } p = 2 \to \boxed{X^2 + 1}\\
-				      \text{si } p > 2 \to \boxed{2X^4 + (p-1) X^2 + 1}
-			      }
-		      $
+        $f =
+          X^{1000} + X^{40} + X^{20}  + 1 =
+          (X^6)^{166}X^4 + (X^6)^6 X^4 + (X^6)^3 X^2  + 1 \conga g
+          X^4 + X^4 \magenta{-} X^2  + 1 =
+          2X^4 - X^2 + 1\\
+          \to$
+        \boxed{r_g(f) = 2X^4 - X^2 + 1}\\
+        \red{¿Qué onda en $\enteros/p\enteros$?}
+        $\to
+          \llave{l}{
+            \text{si } p = 2 \to \boxed{X^2 + 1}\\
+            \text{si } p > 2 \to \boxed{2X^4 + (p-1) X^2 + 1}
+          }
+        $
 
-	\item
-	      $g \divideA g
-		      \sisolosi
-		      \congruencia{X^{100} - X + 1}{0}{X^{100} - X + 1}
-		      \sisolosi
-		      \congruencia{X^{100}}{X - 1}{g}$
+  \item
+        $g \divideA g
+          \sisolosi
+          \congruencia{X^{100} - X + 1}{0}{X^{100} - X + 1}
+          \sisolosi
+          \congruencia{X^{100}}{X - 1}{g}$
 
-	      $f =
-		      X^{200} - 3X^{101} + 2 =
-		      (X^{100})^2 - 3 X^{100} X + 2 \conga g
-		      (X - 1)^2 - 3 (X - 1) X + 2
-		      \\
-		      \to$
-	      \boxed{r_g(f) = (X - 1)^2 - 3 (X - 1) X + 2}
+        $f =
+          X^{200} - 3X^{101} + 2 =
+          (X^{100})^2 - 3 X^{100} X + 2 \conga g
+          (X - 1)^2 - 3 (X - 1) X + 2
+          \\
+          \to$
+        \boxed{r_g(f) = (X - 1)^2 - 3 (X - 1) X + 2}
 
-	\item \textit{Usando la sugerencia}: Del ejercicio \refEjercicio{ej:cong} \ref{item}
-	      sale que $X^n - 1 = (X-1) \cdot \sumatoria{k=0}{n-1} X^k$\\
+  \item \textit{Usando la sugerencia}:
+        Del ejercicio \refEjercicio{ej:cong} \ref{ej4:item-iii}
+        sale que $X^n - 1 = (X-1) \cdot \sumatoria{k=0}{n-1} X^k$\\
 
-	      $\flecha{$n = 5$}[para el $g$]
-		      X^5 - 1 = (X-1)\ub{(X^4 + X^3 +X^2 + X + 1)}{g}
-		      \sisolosi
-		      \congruencia{X^5}{\ub{1}{r_g(X^5)}}{g} \Tilde
-	      $\\
+        $\flecha{$n = 5$}[para el $g$]
+          X^5 - 1 = (X-1)\ub{(X^4 + X^3 +X^2 + X + 1)}{g}
+          \sisolosi
+          \congruencia{X^5}{\ub{1}{r_g(X^5)}}{g} \Tilde
+        $\\
 
-	      $f = (X^5)^{603} X + 2(X^5)^{366} X^3 - (X^5)^{34} X^4 + (X^5)^{27} X^2 + 2X^4 - X^3 + 1\\
-		      \congruencia{f}{\ub{X + 2X^3 - X^4 + X^2 + 2X^4 - X^3 + 1}{= X^4 + X^3 +X^2 + X + 1 =g}}{g}
-		      \sisolosi
-		      \boxed{\congruencia{f}{0}{g}}$
+        $f = (X^5)^{603} X + 2(X^5)^{366} X^3 - (X^5)^{34} X^4 + (X^5)^{27} X^2 + 2X^4 - X^3 + 1\\
+          \congruencia{f}{\ub{X + 2X^3 - X^4 + X^2 + 2X^4 - X^3 + 1}{= X^4 + X^3 +X^2 + X + 1 =g}}{g}
+          \sisolosi
+          \boxed{\congruencia{f}{0}{g}}$
 
 \end{enumerate}
 
-
 \begin{aportes}
-\item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
