--- a/7-guia/ejercicios-7/ej-5-7.tex
+++ b/7-guia/ejercicios-7/ej-5-7.tex
@@ -1,12 +1,11 @@
-\ejercicio
-Determinar todos los $a \en \complejos$ tales que\\
-\begin{enumerate}[label=\roman*)]
-  \item $X^3 + 2X^2 + 2X + 1$ sea divisible por $X^2 + aX + 1$,
-  \item $X^4 - aX^3 + 2X^2 + X + 1$ sea divisible por $X^2 + X + 1$,
-  \item El resto de la división de $X^5 - 3x^3 - x^2 - 2X + 1$ por $X^2 + aX + 1$ sea $-8X + 4$.
-\end{enumerate}
-
-\separadorCorto
+\begin{enunciado}{\ejercicio}
+  Determinar todos los $a \en \complejos$ tales que
+  \begin{enumerate}[label=\roman*)]
+    \item $X^3 + 2X^2 + 2X + 1$ sea divisible por $X^2 + aX + 1$,
+    \item $X^4 - aX^3 + 2X^2 + X + 1$ sea divisible por $X^2 + X + 1$,
+    \item El resto de la división de $X^5 - 3x^3 - x^2 - 2X + 1$ por $X^2 + aX + 1$ sea $-8X + 4$.
+  \end{enumerate}
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
   \item
