--- a/6-guia/teoria-6/teoria-6.tex
+++ b/6-guia/teoria-6/teoria-6.tex
@@ -139,7 +139,7 @@ Notar que:
 \begin{itemize}
   \item $m \en \enteros$ y $n \divideA m \entonces w^m = 1$.
 
-  \item $\congruencia{m}{m'}{n} \entonces w^m = w^{m'}\quad (w^m = w^{r_n(m)})$
+  \item $\congruencia{m}{m'}{n} \entonces w^m = w^{m'} \quad (\red{w^m = w^{r_n(m)}})$
 
   \item $n \divideA m \sisolosi G_n \subseteq G_m$
 
