--- a/7-guia/ejercicios-7/ej-13-7.tex
+++ b/7-guia/ejercicios-7/ej-13-7.tex
@@ -1,14 +1,26 @@
-\ejercicio
-Sea $w = e^{\frac{2\pi}{7}i}$.
-Probar que $w + w^2 + w^4$ es raíz del polinomio $X^2 + X + 2$
+\begin{enunciado}{\ejercicio}
+  Sea $w = e^{\frac{2\pi}{7}i}$.
+  Probar que $w + w^2 + w^4$ es raíz del polinomio $X^2 + X + 2$
+\end{enunciado}
 
-\separadorCorto
+Voy a usar los resultados para la familias de $G_n$
+$$
+  w \en G_7 \entonces
+  \llave{l}{
+    \sumatoria{j=0}{6} w^j = 0 \quad (w \distinto 1)\\
+    w^k = w^{r_7(k)}
+  }
+$$
+Es cuestión de evaluar y rezar {\tiny\faIcon{pray}}. Tengo que $f(X) = X^2 + X + 2$ y $w + w^2 + w^4$ es raíz de $f$:
+$$
+  f(w + w^2 + w^4) =
+  (w + w^2 + w^4)^2 + w + w^2 + w^4 + 2 =
+  \ua{w^8}{= w} + 2w^6 + 2w^5 + 2w^4 + 2w^3 + 2w^2 + w + 2
+  \igual{\red{!}}
+  2\cdot \sumatoria{j=0}{6}w^j = 0
+$$
+Listo efectivamente $w + w^2 + w^4$ es raíz de $f$.
 
-Voy a usar que si $w \en G_7 \entonces \sumatoria{j=0}{6} w^j = 0 \quad (w \distinto 1)$\\
-
-Si $f(X) = X^2 + X + 2$ y $w + w^2 + w^4$ es raíz
-$\entonces f(w + w^2 + w^4) = 0 \\
-	(w + w^2 + w^4)^2 + w + w^2 + w^4 + 2 =
-	\ub{w^8}{= w} + 2w^6 + 2w^5 + 2w^4 + 2w^3 + 2w^2 + w + 2 =
-	2\cdot \sumatoria{j=0}{6}w^j = 0 \Tilde
-$
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
