--- a/7-guia/ejercicios-7/ej-11-7.tex
+++ b/7-guia/ejercicios-7/ej-11-7.tex
@@ -20,7 +20,7 @@ Evalúo para armar un sistema:
 $$
   \llave{l}{
     f(0) = q(0) \cdot \ub{g(0)}{=0} + r(0) = 1\\
-    f(1) = q(1) \cdot \ub{g(1)}{=0} + r(1) = 3\\
+    f(1) = q(1) \cdot \ub{g(1)}{=0} + r(1) = 5\\
     f(-1) = q(-1) \cdot \ub{g(-1)}{=0} + r(-1) = 1 + 3(-1)^{n+1} + 3(-1)^n - 5 -2 + 1 \igual{\red{!}} -5
   }
 $$
@@ -28,30 +28,30 @@ Habemos sistemus de ecuaciunus para encontrar a $r(X)$:
 $$
   \llave{l}{
     r(0) = c = 1 \\
-    r(1) = a + b + 1 = 3 \to a+b = 2 \\
-    r(-1) = a - b + 1 = - 5
+    r(1) = a + b + 1 = 5 \sii a + b = 4 \\
+    r(-1) = a - b + 1 = - 5 \sii a - b = -6
   }
 $$
 Nuevamente el uso de matrices es totalmente opcional. Entonces resuelvo para $a$ y $b$, porque ya tengo $c$:
 $$
   \begin{array}{ccc}
     \matriz{cc|c}{
-    1 & 1   & 2            \\
-    1 & -1  & -5
+    1 & 1   & 4   \\
+    1 & -1  & -6
     }
     \sii
     \matriz{cc|c}{
-    1 & 1   & 2            \\
-    0 & -2  & -7
+    1 & 1   & 4   \\
+    0 & -2  & -10
     }
     \sii
     \matriz{cc|c}{
-    1 & 0   & -\frac{3}{2} \\
-    0 & 1   & -\frac{7}{2}
+    1 & 0   & -1  \\
+    0 & 1   & 5
     }
       & \to &
     \cajaResultado{
-      r(X) = -\frac{3}{2}X^2 - \frac{7}{2}X + 1
+      r(X) = -X^2 + 5X + 1
     }
   \end{array}
 $$
@@ -59,4 +59,5 @@ $$
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/olivportero}{Olivia Portero \github}
+  \item \aporte{https://github.com/RamaEche}{Ramiro E. \github}
 \end{aportes}
