fix ej 11 guia 6 again

--- a/6-guia/ejercicios-6/ej-11-6.tex
+++ b/6-guia/ejercicios-6/ej-11-6.tex
@@ -108,9 +108,9 @@ Si $w \en G_n \entonces
           pero si no uso fórmula geométrica:
         $$
         \sumatoria{i = 0}{4} (w^2)^i  =
-        \frac{(w^2)^{4 + 1} - w^2}{w^2 - 1} =
-        \frac{w^{10} - w^2}{w^2 - 1} =
-        \frac{\magenta{1} - w^2}{w^2 - 1} = -1
+        \frac{(w^2)^{4 + 1} - 1}{w^2 - 1} =
+        \frac{w^{10} - 1}{w^2 - 1} =
+        \frac{\magenta{1} - 1}{w^2 - 1} = 0
         $$
 
   \item Calcular $w^{14} + w^{-8} + \conj w^4 + \conj{w^{-3}}$ para cada $w \en G_5$
